--- a/style.css
+++ b/style.css
@@ -12,6 +12,67 @@ body{
 	flex-direction: column;
 }
 
+.gameLogo {
+  position: fixed;
+  top: 20px;
+  left: 30px;
+  font-size: 46px;
+  margin: 0;
+  padding: 0;
+  font-style: italic;
+  position: fixed;
+
+  cursor: default;
+  color:rgb(255, 255, 255);
+  font-family:Verdana, Geneva, sans-serif;
+  
+  text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -webkit-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -moz-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+}
+
 img[hidden]{
 	display: none;
+}
+
+#canvas {
+  background-image: url(./source/canvasBackground.jpg);
+  background-size: 100% auto ;
+  background-position: bottom;
+}
+
+.canvas {
+  margin-bottom: 10px;
+}
+
+.buttonAnimate {
+  width: 150px;
+  padding: 10px 0 10px 0;
+  border-radius: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: oblique;
+  font-size: 20px;
+  font-weight: 800;
+  background-color: rgb(101, 158, 54);
+  transition: 0.2s;
+
+  box-shadow: 0 5px 0px 0px;
+  text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -webkit-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -moz-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0); 
+}
+
+/* .buttonAnimate:hover {
+  transform: scale(1.02);
+  box-shadow: 0 7px 0px 0px;
+} */
+
+.buttonAnimate:active {
+  transform: scale(0.955);
+  box-shadow:  0px 0px 2px;
+}
+
+.buttonAnimate__text {
+  /* наклонить текст как будет инет */
+  color: aliceblue;
 }
