--- a/style.css
+++ b/style.css
@@ -14,6 +14,46 @@ body{
   background-size: cover;
 }
 
+.banner{
+	padding: 5px;
+	top: 50%;
+	left: 50%;
+	position: absolute;
+	z-index: 2;
+	transform: translate(-50%, -50%);
+	width: 200px;
+	/* height: 200px; */
+	background-color: aquamarine;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 25px;
+	text-align: center;
+}
+.blur{
+	filter: blur(5px);
+}
+.confirm__text{
+	margin-bottom: 20px;
+}
+.confirm > input{
+	width: 45%;
+	height: 50px;
+}
+.pointEvent{
+	pointer-events: none;
+}
+[value = 'Start game']{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 120px;
+	height: 50px;
+	font-size: 20px;
+}
+
 .gameLogo {
   position: fixed;
   top: 20px;
