--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body{
 }
 
 .banner{
-	padding: 5px;
+	padding: 20px;
 	top: 50%;
 	left: 50%;
 	position: absolute;
 	z-index: 2;
 	transform: translate(-50%, -50%);
-	width: 200px;
+	width: 300px;
 	/* height: 200px; */
-	background-color: aquamarine;
+	background-color: rgb(108, 92, 180);
+  box-shadow: 2px 2px 5px 3px;
 	border-radius: 10px;
 	display: flex;
 	align-items: center;
@@ -35,11 +36,44 @@ body{
 	filter: blur(5px);
 }
 .confirm__text{
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  cursor: default;
+  color:rgb(255, 255, 255);
+  font-family:Verdana, Geneva, sans-serif;
+  text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -webkit-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -moz-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 	margin-bottom: 20px;
 }
 .confirm > input{
 	width: 45%;
 	height: 50px;
+}
+
+.confirm__button{
+  border-radius: 10px;
+  transition: 0.2s;
+
+  background-color: rgb(175, 190, 38);
+  box-shadow: 0 5px 0px 0px;
+
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: 700;
+  font-style: italic;
+  cursor: default;
+  
+  /* color: black; */
+  font-family:Verdana, Geneva, sans-serif;
+  /* text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -webkit-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
+  -moz-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0); */
+}
+
+.confirm__button:active {
+  transform: scale(0.955);
+  box-shadow:  0px 0px 2px;
 }
 .pointEvent{
 	pointer-events: none;
