--- a/style.css
+++ b/style.css
@@ -30,20 +30,26 @@ body{
 	justify-content: center;
 	font-size: 25px;
 	text-align: center;
+	overflow: hidden;
 }
+
 .blur{
 	filter: blur(5px);
 }
+
 .confirm__text{
 	margin-bottom: 20px;
 }
+
 .confirm > input{
 	width: 45%;
 	height: 50px;
 }
+
 .pointEvent{
 	pointer-events: none;
 }
+
 [value = 'Start game']{
 	position: absolute;
 	top: 50%;
@@ -52,6 +58,23 @@ body{
 	width: 120px;
 	height: 50px;
 	font-size: 20px;
+}
+
+.notLoad{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 150%;
+	height: 200%;
+	top: 50%;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, -50%) rotate(45deg);
+	backdrop-filter: blur(5px);
+}
+.notLoad > p{
+	width: 100px;
+	font-weight: bolder;
 }
 
 .gameLogo {
